; ModuleID = '/home/carl/AnghaBench/lz4/tests/extr_frametest.c_FUZ_writeLE32.c'
source_filename = "/home/carl/AnghaBench/lz4/tests/extr_frametest.c_FUZ_writeLE32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @FUZ_writeLE32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @FUZ_writeLE32(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to i64*
  store i64* %7, i64** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = load i64*, i64** %5, align 8
  %11 = getelementptr inbounds i64, i64* %10, i64 0
  store i64 %9, i64* %11, align 8
  %12 = load i32, i32* %4, align 4
  %13 = ashr i32 %12, 8
  %14 = sext i32 %13 to i64
  %15 = load i64*, i64** %5, align 8
  %16 = getelementptr inbounds i64, i64* %15, i64 1
  store i64 %14, i64* %16, align 8
  %17 = load i32, i32* %4, align 4
  %18 = ashr i32 %17, 16
  %19 = sext i32 %18 to i64
  %20 = load i64*, i64** %5, align 8
  %21 = getelementptr inbounds i64, i64* %20, i64 2
  store i64 %19, i64* %21, align 8
  %22 = load i32, i32* %4, align 4
  %23 = ashr i32 %22, 24
  %24 = sext i32 %23 to i64
  %25 = load i64*, i64** %5, align 8
  %26 = getelementptr inbounds i64, i64* %25, i64 3
  store i64 %24, i64* %26, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
